update url to relative path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kook",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
